[package]
name = "rust-playground"
version = "0.1.0"
authors = ["Matthew Knight <mattlknight@gmail.com>"]

[dependencies]
hyper = "0.9.14"
lazy_static = "0.2.2"
nickel = "0.9.0"
regex = "0.2.1"
rustc-serialize = "0.3.22"

[lib]
name = "mylib"
path = "src/lib.rs"

[[bin]]
name = "mybin"
path = "src/main.rs"
